# Blokaroka

./: .clang-format  .gitignore  .gitmodules  Blok.cpp  Blok.h  Blokaroka.cpp  Blokaroka.h  Blokaroka.vcxproj  Brick.cpp  Brick.h  Brick.sln  Brick.vcproj  Brick.vcxproj  Brick.vcxproj.filters  CMakeLists.txt  DesktopBricks.cpp  DesktopBricks.h  GameState.cpp  GameState.h  LEGO.cpp  LEGO.h  LEGO.sln  LEGO.vcxproj  LEGO.vcxproj.filters  Physics.cpp  Physics.h  README.md  Renderer.cpp  Renderer.h  Resource.aps  Resource.rc  SoundManager.h  gamestate.db  resource.h
Hooks/: Hooks.cpp  Hooks.h  Hooks.vcproj
Hooks/Release/: BuildLog.htm  mt.dep  vc80.idb
Saves/: save1.blok
src/: Blok.cpp  Blok.h  Blokaroka.cpp  Blokaroka.h  CMakeLists.txt  GameState.cpp  GameState.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  resource.h  resource.rc  sources.cmake
